# cgclient

./: .gitignore  CMakeLists.txt  README.md  cmake_build.bat  cmake_init.bat  cmake_install.bat  global.h  helloworld.cpp  test.cpp
core/: core.h  (+1 more)
engine/: CMakeLists.txt  global.h
engine/core/: Component.cpp  Component.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Log.cpp  Log.h  Node.cpp  Node.h  Scene.cpp  Scene.h  System.cpp  System.h  core.h  log.h
engine/core/action/: Action.cpp  Action.h  AlphaAction.cpp  AlphaAction.h  Animation.cpp  Animation.h  ColorAction.cpp  ColorAction.h  Ease.h  ParticlesAnimation.cpp  ParticlesAnimation.h  PositionAction.cpp  PositionAction.h  RotationAction.cpp  RotationAction.h  ScaleAction.cpp  ScaleAction.h  SpriteAnimation.cpp  SpriteAnimation.h  TimedAction.cpp  TimedAction.h
engine/core/buffer/: Attribute.cpp  Attribute.h  Buffer.cpp  Buffer.h  ExternalBuffer.cpp  ExternalBuffer.h  IndexBuffer.cpp  IndexBuffer.h  InterleavedBuffer.cpp  InterleavedBuffer.h
engine/core/component/: ActionComponent.h  AlphaActionComponent.h  AnimationComponent.h  AudioComponent.h  Body2DComponent.h  Body3DComponent.h  BoneComponent.h  ButtonComponent.h  CameraComponent.h  ColorActionComponent.h  FogComponent.h  ImageComponent.h  Joint2DComponent.h  Joint3DComponent.h  KeyframeTracksComponent.h  LightComponent.h  MeshComponent.h  MeshPolygonComponent.h  ModelComponent.h  MorphTracksComponent.h  ParticlesAnimationComponent.h  ParticlesComponent.h  PolygonComponent.h  PositionActionComponent.h  RotateTracksComponent.h  RotationActionComponent.h  ScaleActionComponent.h  ScaleTracksComponent.h  SkyComponent.h  SpriteAnimationComponent.h  SpriteComponent.h  TerrainComponent.h  TextComponent.h  TextEditComponent.h  TilemapComponent.h  TimedActionComponent.h  Transform.h  TranslateTracksComponent.h  UIComponent.h  UIContainerComponent.h  (+1 more)
engine/core/ecs/: ComponentArray.h  ComponentManager.h  Entity.h  EntityManager.h  Signature.h  SubSystem.h
engine/global/: global.h
engine/json/: jsonobject.cpp  jsonobject.h
engine/loader/: iloader.h  loader_gltf.cpp  loader_gltf.h  loader_text.cpp  loader_text.h  loadertool.cpp  loadertool.h
engine/net/: httptool.cpp  httptool.h  socket.h
engine/render/: render_object.cpp  render_object.h  shader.cpp  shader.h
engine/ui/: Text.h  UIComponent.h  UINode.cpp  UINode.h  UIText.cpp  UIText.h
engine/v8/: v8engine.cpp  v8engine.h
(+253 files in other folders)
